syntax = "proto3";
package user;
import "user/user.enum.proto";
import "patch/go.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "xyz.hoper.protobuf.user";
option go_package = "github.com/liov/hoper/server/go/mod/protobuf/user";


// 用户
message User {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" annotation:"昵称"'}];
  string account = 17 [(go.field) = {tags:'gorm:"size:36;not null;unique" validate:"required,gte=6,lte=20" annotation:"账号"'}];
  string password = 5 [(go.field) = {tags:'json:"-" gorm:"size:32;not null" validate:"gte=8,lte=15" annotation:"密码"'}];
  string mail = 6 [(go.field) = {tags:'gorm:"size:16;default:\'\'" validate:"email" annotation:"邮箱"'}];
  string phone = 7 [(go.field) = {tags:'gorm:"size:32;default:\'\'" validate:"phone" annotation:"手机号"'}];
  // 性别，0未填写，1男，2女
  Gender gender = 8 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  string birthday = 9 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:0001-01-01 00:00:00;index"'}];
  string address = 14 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string intro = 10 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string signature = 11 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string avatarUrl = 12 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string coverUrl = 13 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  Role role = 24 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  string realName = 19 [(go.field) = {tags:'gorm:"size:5;default:\'\'" annotation:"实名"'}];
  string IdNo = 18 [(go.field) = {tags:'gorm:"size:22;default:\'\'" annotation:"身份证号"'}];
  UserStatus status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string activatedAt = 3 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:0001-01-01 00:00:00;index"'}];
  string deletedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:0001-01-01 00:00:00;index"'}];
  // uint32 isDeleted = 29 [(go.field) = {tags:'gorm:"default:0"'}];
}

message UserExt {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string lastActivatedAt = 23 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:0001-01-01 00:00:00;index" annotation:"上次操作时间"'}];
  uint64 score = 15 [(go.field) = {tags:'gorm:"default:0" annotation:"分数"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title:"分数"
    type: INTEGER}];
  uint64 followCount = 2 [(go.field) = {tags:'gorm:"default:0" annotation:"关注数"'}];
  uint64 followedCount = 17 [(go.field) = {tags:'gorm:"default:0" annotation:"被关注数"'}];
  uint64 articleCount = 18 [(go.field) = {tags:'gorm:"default:0" annotation:"文章数"'}];
  uint64 momentCount = 19 [(go.field) = {tags:'gorm:"default:0" annotation:"瞬间数"'}];
  uint64 diaryBookCount = 20 [(go.field) = {tags:'gorm:"default:0" annotation:"日记本数"'}];
  uint64 diaryCount = 21 [(go.field) = {tags:'gorm:"default:0" annotation:"日记数"'}];
  uint64 favoritesCount = 5 [(go.field) = {tags:'gorm:"default:0" annotation:"收藏夹数"'}];
  uint64 collectCount = 3 [(go.field) = {tags:'gorm:"default:0" annotation:"收藏数"'}];
}

//关注表
message UserFollow {
  uint64 userId = 1 [(go.field) = {tags:'gorm:"index"'}];
  uint64 followId = 2 [(go.field) = {tags:'gorm:"default:0"'}];
  string createdAt = 3 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string deletedAt = 4 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:0001-01-01 00:00:00;index"'}];
  uint32 status = 5 [(go.field) = {tags:'gorm:"type:int2;"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }]; //状态：0无效，1有效
}

//用户分数变化日志
message UserScoreLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  sint64 score = 3 [(go.field) = {tags: 'json:"score" gorm:""'}];
  string reason = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  string createdAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
}
//用户封禁日志
message UserBannedLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  uint64 duration = 3 [(go.field) = {tags:'gorm:""'}];
  string reason = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  BannedType type = 5 ;
  string bannedAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
}

//用户操作日志
message UserActionLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  //类型
  Action action = 3;
  //相关id
  string relatedId = 4[(go.field) = {tags:'gorm:"size:255"'}];
  bytes lastValue = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  string createdAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
  //设备
  UserDeviceInfo deviceInfo = 8 [(go.field) = {tags:'gorm:"embedded"'}];
  uint32 device = 9;

}

//简历
message Resume {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  // 公司或组织或学校
  string company = 3 [(go.field) = {tags:'gorm:"size:255"'}];
  // 职位或学历
  string title = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  // 部门或专业
  string department = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  string startTime = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  string endTime = 7 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  string remark = 11 [(go.field) = {tags:'gorm:"size:255"'}];
  // 0-Education 教育经历,1- Work 职业生涯
  uint32 type = 12 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message UserBaseInfo {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" annotation:\"名字\"'}];
  uint64 score = 3 [(go.field) = {tags:'gorm:"default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title:"分数"
    type: INTEGER}];
  Gender gender = 8 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  string avatarUrl = 12 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
}

// 用户授权信息
message UserAuthInfo {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" annotation:\"名字\"'}];
  Role role = 24 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  UserStatus status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message UserOAuthInfo {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" annotation:\"名字\"'}];
  string mail = 6 [(go.field) = {tags:'gorm:"size:16;default:\'\'" validate:"email" annotation:"邮箱"'}];
  string location = 16[(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string introduction = 10 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
  string avatarURL = 12 [(go.field) = {tags:'gorm:"size:255;default:\'\'"'}];
}

message UserDeviceInfo {
  //设备
  string device = 1 [(go.field) = {tags:'gorm:"size:255"'}];
  string os = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  string appCode = 6 [(go.field) = {tags:'gorm:"size:255"'}];
  string appVersion = 7 [(go.field) = {tags:'gorm:"size:255"'}];
  string IP = 3 [(go.field) = {tags:'gorm:"size:255"'}];
  string lng = 8 [(go.field) = {tags:'gorm:"type:numeric(10,6)"'}];
  string lat = 9 [(go.field) = {tags:'gorm:"type:numeric(10,6)"'}];
  string area = 2 [(go.field) = {tags:'gorm:"size:255"'}];
  string userAgent = 5 [(go.field) = {tags:'gorm:"size:255"'}];
}

message Response{
  oneof res {
    uint32 code = 1;
    string msg = 2;
  }
}

message UserContent{
  uint64 momentCount = 1;
  uint64 diaryCount = 2;
  uint64 articleCount = 3;
  uint64 favCount = 4;
}